# iten-forge

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  daily-workout-reminder.yml
docs/: twilio-setup.md
garmin/: export_garmin_workouts.py  garmin_workouts.json
iten_forge/: __init__.py  config.py  paces.py  plan.py  server.py
scripts/: send_reminder.py  training_plan.py
static/: app.js  index.html  style.css
tests/: test_paces.py  test_plan.py
