[tool.poetry]
name = "iten-forge"
version = "0.1.0"
description = "12-week marathon training plan engine. Forged in the City of Champions."
authors = []
license = "MIT"
readme = "README.md"
packages = [{include = "iten_forge"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
asyncpg = "^0.30.0"
pydantic = "^2.9.0"
twilio = "^9.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
ruff = "^0.8"
httpx = "^0.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
